sys/compat/freebsd32/freebsd32_misc.c
@@ -3485,3 +3485,20 @@ freebsd32_ppoll(struct thread *td, struct freebsd32_ppoll_args *uap)
 
 	return (kern_poll(td, uap->fds, uap->nfds, tsp, ssp));
 }
+
+int
+freebsd32_sched_rr_get_interval(struct thread *td,
+    struct freebsd32_sched_rr_get_interval_args *uap)
+{
+	struct timespec ts;
+	struct timespec32 ts32;
+	int error;
+
+	error = kern_sched_rr_get_interval(td, uap->pid, &ts);
+	if (error == 0) {
+		CP(ts, ts32, tv_sec);
+		CP(ts, ts32, tv_nsec);
+		error = copyout(&ts32, uap->interval, sizeof(ts32));
+	}
+	return (error);
+}
